--- a/src/index.css
+++ b/src/index.css
@@ -210,7 +210,7 @@ canvas {
   margin-left: 1rem;
   padding: 1rem;
   border-radius: 9999px; /* full rounded */
-  background-color: #d1d5db; /* gray-300 */
+  background-color: #262627; /* gray-300 */
   backdrop-filter: blur(10px);
   display: flex;
   align-items: center;
