--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@ canvas {
   padding-top: 1rem;
   padding-bottom: 1rem;
   border-radius: 9999px; /* full rounded */
-  background-color: #d1d5db; /* gray-300 */
+  background-color: #262627; /* gray-300 */
   backdrop-filter: blur(10px);
 }
 
@@ -79,7 +79,7 @@ canvas {
   justify-content: center;
   padding: 0.25rem;
   border-radius: 9999px; /* full rounded */
-  background-color: #d1d5db; /* gray-300 */
+  background-color: #262627; /* gray-300 */
   backdrop-filter: blur(10px);
   margin-left: 0.75rem;
   gap: 0.25rem;
